# PyGEVO

./: .gitignore  LICENSE  README.md  compileAll.py  compiler.py  evolutionaryProcess.py  grammar.bnf  grammar_1.bnf  grammar_ANSI_C.bnf  requirements.txt  setup.cfg  setupAll.py
Examples/ANSI_C_Classify/: grammar.bnf  run.py
Examples/ASIN_C_Classify/: fitnessFunctionTest.c  grammar.bnf  run.py
Examples/Basic_Example/: evolutionaryProcess.py  grammar_action.bnf
Examples/Grammars/: grammar_ANSI_C.bnf
Examples/MazeGen_Generator/: fitnessFunction-v1.py  grammar-v1.bnf  run-v1.py  run.py
Examples/Python_Classify/: FitnessFunction.c  FitnessFunction.html  FitnessFunction.py  fitnesFunction.c  fitnesFunction.pyx  fitnesFunctionTest.py  grammar.bnf  run.py  setupAll.py
Examples/Python_Pi/: data  data_1  data_1_1000inds  fitnesFunction.c  fitnesFunction.py  fitnesFunction.pyx  grammar.bnf  run.py
Examples/Python_PrimesN/: compileAll.py  data  fitnesFunction.c  fitnesFunction.pyx  grammar.bnf  run.py  setupAll.py
Examples/Python_Trading/: config.json  fitnesFunction.c  fitnesFunction.py  grammar.bnf  historicalCripto.py  run.py  runs.py  testPhenotype.py
Examples/Python_Trading - copia/: config.json  fitnesFunction.py  grammar.bnf  run.py  runs.py  testPhenotype.py  testRealPhenotype.py
src/: compiler.py
tests/: BNF_test_1.bnf  grammarContainer.py  test_grammarWrapper.py  test_mapper.py  test_searchOperators.py
utils/: algorithms.py  grammarWrapper.py  population.py
utils_/: algorithms.py  general_functions.py  grammarWrapper.py  population.py
(+281 files in other folders)
