[metadata]
name = PyGE
version = 0.0.9
author = Ivan Guevara & Lucas Gonzalez
author_email = ivan.hugo.guevara@gmail.com
description = The package for PyGE
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/IvanHGuevara/PyGE
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires = 
    gevent
    numpy

[options.packages.find]
where = src
